--- a/app/assets/sass/opss/_opss-shared.scss
+++ b/app/assets/sass/opss/_opss-shared.scss
@@ -70,7 +70,7 @@ h1.govuk-label-wrapper label.govuk-label--l {
     display: none;
 }
 body.js-enabled .opss-nojs-hide {
-    display: inline-block;
+    display: inline;
 }
 .js-enabled {
     .opss-js-enabled-hidden {
