--- a/app/views/cosmetics-general/tasks/pg-accept-and-submit-1a-errors.html
+++ b/app/views/cosmetics-general/tasks/pg-accept-and-submit-1a-errors.html
@@ -27,7 +27,7 @@
         [Nanomaterial name] is not included in any items
       </li>
       <li>
-        [Another nanomaterial name] is not included in any items.
+        [Another nanomaterial name] is not included in any items
       </li>
     </ul>
 
@@ -97,18 +97,18 @@
               <div class="govuk-summary-list__row">
                   <dt class="govuk-summary-list__key">Label image</dt>
                   <dd class="govuk-summary-list__value">
-                      <a href="#" class="govuk-link govuk-link--no-visited-state" rel="noreferrer noopener" target="_blank">image-file-1.jpg (opens in new tab)</a>
+                      <a href="#" class="govuk-link govuk-link--no-visited-state" rel="noreferrer noopener" target="_blank">image-file-1.jpg<span class="govuk-visually-hidden"> (opens in new tab)</span></a>
 
                         <!-- Or...
                       <ul class="govuk-list govuk-list--bullet">
                           <li>
-                              <a href="#" class="govuk-link govuk-link--no-visited-state" rel="noreferrer noopener" target="_blank">image-file-1.jpg (opens in new tab)</a>
+                              <a href="#" class="govuk-link govuk-link--no-visited-state" rel="noreferrer noopener" target="_blank">image-file-1.jpg<span class="govuk-visually-hidden"> (opens in new tab)</span></a>
                           </li>
                           <li>
-                              <a href="#" class="govuk-link govuk-link--no-visited-state" rel="noreferrer noopener" target="_blank">image-file-2.jpg (opens in new tab)</a>
+                              <a href="#" class="govuk-link govuk-link--no-visited-state" rel="noreferrer noopener" target="_blank">image-file-2.jpg<span class="govuk-visually-hidden"> (opens in new tab)</span></a>
                           </li>
                           <li>
-                              <a href="#" class="govuk-link govuk-link--no-visited-state" rel="noreferrer noopener" target="_blank">image-file-3.jpg (opens in new tab)</a>
+                              <a href="#" class="govuk-link govuk-link--no-visited-state" rel="noreferrer noopener" target="_blank">image-file-3.jpg<span class="govuk-visually-hidden"> (opens in new tab)</span></a>
                           </li>
                       </ul>
                         -->
@@ -200,7 +200,7 @@
               <div class="govuk-summary-list__row">
                   <dt class="govuk-summary-list__key">Formulation</dt>
                   <dd class="govuk-summary-list__value">
-                      <a class="govuk-link govuk-link--no-visited-state" href="../my_pdf.pdf" rel="noreferrer noopener" target="_blank">my_pdf.pdf (opens in new tab)</a>
+                      <a class="govuk-link govuk-link--no-visited-state" href="../my_pdf.pdf" rel="noreferrer noopener" target="_blank">my_pdf.pdf<span class="govuk-visually-hidden"> (opens in new tab)</span></a>
                   </dd>
               </div>
               <div class="govuk-summary-list__row">
@@ -301,7 +301,7 @@
               <div class="govuk-summary-list__row">
                   <dt class="govuk-summary-list__key">Formulation</dt>
                   <dd class="govuk-summary-list__value">
-                      <a class="govuk-link govuk-link--no-visited-state" href="../this-pdf.pdf" rel="noreferrer noopener" target="_blank">this-pdf.pdf (opens in new tab)</a>
+                      <a class="govuk-link govuk-link--no-visited-state" href="../this-pdf.pdf" rel="noreferrer noopener" target="_blank">this-pdf.pdf<span class="govuk-visually-hidden"> (opens in new tab)</span></a>
                   </dd>
               </div>
               <div class="govuk-summary-list__row">
@@ -375,7 +375,7 @@
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key ">Formulation</dt>
                   <dd class="govuk-summary-list__value">
-                      <a class="govuk-link govuk-link--no-visited-state" href="../mypdf.pdf" rel="noreferrer noopener" target="_blank">mypdf.pdf (opens in new tab)</a>
+                      <a class="govuk-link govuk-link--no-visited-state" href="../mypdf.pdf" rel="noreferrer noopener" target="_blank">mypdf.pdf<span class="govuk-visually-hidden"> (opens in new tab)</span></a>
                   </dd>
             </div>
             <div class="govuk-summary-list__row">
