--- a/app/views/cosmetics-general/tasks/pg-accept-and-submit-1a.html
+++ b/app/views/cosmetics-general/tasks/pg-accept-and-submit-1a.html
@@ -75,18 +75,18 @@
               <div class="govuk-summary-list__row">
                   <dt class="govuk-summary-list__key">Label image</dt>
                   <dd class="govuk-summary-list__value">
-                      <a href="#" class="govuk-link govuk-link--no-visited-state" rel="noreferrer noopener" target="_blank">image-file-1.jpg (opens in new tab)</a>
+                      <a href="#" class="govuk-link govuk-link--no-visited-state" rel="noreferrer noopener" target="_blank">image-file-1.jpg<span class="govuk-visually-hidden"> (opens in new tab)</span></a>
 
                         <!-- Or...
                       <ul class="govuk-list govuk-list--bullet">
                           <li>
-                              <a href="#" class="govuk-link govuk-link--no-visited-state" rel="noreferrer noopener" target="_blank">image-file-1.jpg (opens in new tab)</a>
+                              <a href="#" class="govuk-link govuk-link--no-visited-state" rel="noreferrer noopener" target="_blank">image-file-1.jpg<span class="govuk-visually-hidden"> (opens in new tab)</span>
                           </li>
                           <li>
-                              <a href="#" class="govuk-link govuk-link--no-visited-state" rel="noreferrer noopener" target="_blank">image-file-2.jpg (opens in new tab)</a>
+                              <a href="#" class="govuk-link govuk-link--no-visited-state" rel="noreferrer noopener" target="_blank">image-file-2.jpg<span class="govuk-visually-hidden"> (opens in new tab)</span>
                           </li>
                           <li>
-                              <a href="#" class="govuk-link govuk-link--no-visited-state" rel="noreferrer noopener" target="_blank">image-file-3.jpg (opens in new tab)</a>
+                              <a href="#" class="govuk-link govuk-link--no-visited-state" rel="noreferrer noopener" target="_blank">image-file-3.jpg<span class="govuk-visually-hidden"> (opens in new tab)</span>
                           </li>
                       </ul>
                         -->
@@ -178,7 +178,7 @@
               <div class="govuk-summary-list__row">
                   <dt class="govuk-summary-list__key">Formulation</dt>
                   <dd class="govuk-summary-list__value">
-                      <a class="govuk-link govuk-link--no-visited-state" href="../mypdf.pdf" rel="noreferrer noopener" target="_blank">mypdf.pdf (opens in new tab)</a>
+                      <a class="govuk-link govuk-link--no-visited-state" href="../mypdf.pdf" rel="noreferrer noopener" target="_blank">mypdf.pdf<span class="govuk-visually-hidden"> (opens in new tab)</span></a>
                   </dd>
               </div>
               <div class="govuk-summary-list__row">
@@ -353,7 +353,7 @@
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key ">Formulation</dt>
                   <dd class="govuk-summary-list__value">
-                      <a class="govuk-link govuk-link--no-visited-state" href="../mypdf.pdf" rel="noreferrer noopener" target="_blank">my_pdf.pdf (opens in new tab)</a>
+                      <a class="govuk-link govuk-link--no-visited-state" href="../mypdf.pdf" rel="noreferrer noopener" target="_blank">my_pdf.pdf<span class="govuk-visually-hidden"> (opens in new tab)</span></a>
                   </dd>
             </div>
             <div class="govuk-summary-list__row">
