--- a/app/views/index.html
+++ b/app/views/index.html
@@ -106,6 +106,12 @@
             <li><a class="govuk-link govuk-link--no-visited-state" href="/psd-general/businesses-page" target="_blank">Businesses</a> page</li>
           </ul>
 
+          <p class="govuk-body"><b>Products:</b></p>
+
+          <ul class="govuk-list govuk-list--bullet">
+            <li><a class="govuk-link govuk-link--no-visited-state" href="/psd-general/products-page" target="_blank">Products</a> page</li>
+          </ul>
+
         </div>
       </details>
 
