text updates for help hints

--- a/app/views/cosmetics-general/tasks/pg-remove-item-blocked.html
+++ b/app/views/cosmetics-general/tasks/pg-remove-item-blocked.html
@@ -24,11 +24,9 @@
 
         <p class="govuk-body">This product notification draft has defined the product as being a multi-item kit and currently includes 2 items. A product including only 1 item (or component) is classified as a single item product and is not a multi-item kit product.</p>
 
-        <p class="govuk-body">To remove an item you must first add a new item.</p>
+        <p class="govuk-body">To remove an item you must first add a new item. <span class="govuk-!-font-weight-bold">If the product is not a multi-item kit product</span>, you will need to <a href="pg-delete-draft" class="govuk-link govuk-link--no-visited-state">delete this draft</a>.</p>
 
-        <div class="govuk-inset-text">
-            <p class="govuk-body">If the product is not a multi-item kit product, please <a href="pg-delete-draft" class="govuk-link govuk-link--no-visited-state">delete this draft</a>.</p>
-        </div>
+        <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
         <p class="govuk-body">Return to the <a href="#" class="govuk-link govuk-link--no-visited-state">tasks list page</a>.</p>
 
