--- a/app/views/cosmetics-general/tasks/inc_opss-add-cosmetics-hint.html
+++ b/app/views/cosmetics-general/tasks/inc_opss-add-cosmetics-hint.html
@@ -19,7 +19,7 @@
                     Completing the first task may change the list and the number of tasks.
                 </p>
                 <p class="govuk-body-s">
-                    Before you accept and submit a draft you can change information by completing individual tasks again. If you have added items (for multi-item kits) or nanomaterials, you can add or remove them individual at any stage.
+                    Before you accept and submit a draft you can change information by completing individual tasks again. If you have added items (for multi-item kits) or nanomaterials, you can add or remove them individually at any stage.
                 </p>
             </div>
         </details>
