--- a/app/views/cosmetics-general/tasks/inc_opss-add-cosmetics-hint.html
+++ b/app/views/cosmetics-general/tasks/inc_opss-add-cosmetics-hint.html
@@ -14,12 +14,11 @@
                 <p class="govuk-body-s">
                     Your progress in completing each task is saved as a working draft until you are ready to accept and submit it. Product drafts are stored in the <a href="#" class="govuk-link govuk-link--no-visited-state">Cosmetic products page</a> from where you can resume and complete the remaining tasks at any time.</p>
                 </p>
-
-                <p class="govuk-body-s">
+                <!--p class="govuk-body-s">
                     Completing the first task may change the list and the number of tasks.
-                </p>
+                </p-->
                 <p class="govuk-body-s">
-                    Before you accept and submit a draft you can change information by completing individual tasks again. If you have added items (for multi-item kits) or nanomaterials, you can add or remove them individually at any stage.
+                    Before you accept and submit a draft you can change information at any stage by completing individual tasks again. If you have added items (for multi-item kits) or nanomaterials, you can add or remove them individually at any stage.
                 </p>
             </div>
         </details>
