fieldset no border

--- a/app/views/psd-general/inc_opss-results-section.html
+++ b/app/views/psd-general/inc_opss-results-section.html
@@ -6,12 +6,14 @@
            </div>
            <div class="govuk-grid-column-one-third">
                <div class="govuk-form-group opss-text-align-right">
-                   <form id="sort-form" action="#" method="post">
+                   <!--form id="sort-form" action="#" method="post"-->
+                   <fieldset class="opss-border-none">
                         <label class="govuk-label govuk-body-s" for="results-sort">
                             Sort by
                         </label>
                         {% include "psd-general/inc_opss-sorting.html" %}
-                    </form>
+                    </fieldset>
+                    <!--/form-->
                 </div>
            </div>
         </div>
