small fieldset class edit

--- a/app/views/psd-general/inc_opss-results-section.html
+++ b/app/views/psd-general/inc_opss-results-section.html
@@ -7,7 +7,7 @@
            <div class="govuk-grid-column-one-third">
                <div class="govuk-form-group opss-text-align-right">
                    <!--form id="sort-form" action="#" method="post"-->
-                   <fieldset class="opss-border-none">
+                   <fieldset class="opss-border-none govuk-!-padding-0">
                         <label class="govuk-label govuk-body-s" for="results-sort">
                             Sort by
                         </label>
