--- a/app/views/index.html
+++ b/app/views/index.html
@@ -187,9 +187,10 @@
             <ul class="govuk-list govuk-list--bullet">
               <li>Cosmentics search results page...
                 <ul class="govuk-list govuk-list--bullet">
-                  <li><a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-search-designs/search-page-01.html" target="_blank">#1132 Search page design</a></li>
-                  <li><a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-search-designs/search-page-01-error.html" target="_blank">#1132 Search page design with errors</a></li>
-                  <li><a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-search-designs/form-behaviours.txt" target="_blank">#1132 notes about the form(s)</a></li>
+                  <!-- sass commented out li><a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-search-designs/search-page-01.html" target="_blank">#1132 Search page design</a></li>
+                  <li><a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-search-designs/search-page-01-error.html" target="_blank">#1132 Search page design with errors</a></li-->
+                  <!--li><a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-search-designs/form-behaviours.txt" target="_blank">#1132 notes about the form(s)</a></li-->
+                  <li><a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-search-designs/search-page-01b.html" target="_blank"><b>New</b> results list design</a></li>
                 </ul>
               </li>
             </ul>
