--- a/app/views/cosmetics-search-designs/search-page-01b.html
+++ b/app/views/cosmetics-search-designs/search-page-01b.html
@@ -13,6 +13,7 @@
 
 
 {% block content %}
+<!-- new search page table design -->
 <div class="govuk-grid-row">
     <section class="govuk-grid-column-full">
 
