filters form edits

--- a/app/views/cosmetics-search-designs/search-page-01b-new-reset.html
+++ b/app/views/cosmetics-search-designs/search-page-01b-new-reset.html
@@ -58,11 +58,11 @@
                         <label class="govuk-label" for="category">
                             Product category
                         </label>
-                        <select class="govuk-select" id="category" name="category">
-                            <option value="">All</option>
+                        <select class="govuk-select" id="notification_search_form_category" name="category">
+                            <option value="" selected="selected">All</option>
                             <option value="val01">Option 1</option>
                             <option value="val02">Option 2</option>
-                            <option value="val03" selected>Option 3</option>
+                            <option value="val03">Option 3</option>
                             <option value="val04">Option 4</option>
                         </select>
                     </div>
