--- a/app/views/cosmetics-general/tasks/pg-remove-item-blocked.html
+++ b/app/views/cosmetics-general/tasks/pg-remove-item-blocked.html
@@ -20,7 +20,7 @@
 
         <h1 class="govuk-heading-m govuk-!-margin-bottom-0">You cannot remove an item</h1>
 
-        <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">A multi-item kit product must include 2 or more items</p>
+        <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">A multi-item kit product must include 2 or more items.</p>
 
         <p class="govuk-body">This product notification draft has defined the product as being a multi-item kit and currently includes 2 items. A product including only 1 item (or component) is classified as a single item product and is not a multi-item kit product.</p>
 
