js support updates

--- a/app/views/cosmetics-search-designs/search-page-01b-new-reset.html
+++ b/app/views/cosmetics-search-designs/search-page-01b-new-reset.html
@@ -58,7 +58,7 @@
                         <label class="govuk-label" for="category">
                             Product category
                         </label>
-                        <select class="govuk-select" id="notification_search_form_category" name="category">
+                        <select class="govuk-select" id="category" name="category">
                             <option value="" selected="selected">All</option>
                             <option value="val01">Option 1</option>
                             <option value="val02">Option 2</option>
@@ -197,7 +197,7 @@
                     Apply
                 </button>
 
-                <button type="reset" class="govuk-button opss-button-link opss-nojs-hide govuk-!-font-size-16 opss-nojs-hide" id="opss-reset" data-module="govuk-button">
+                <button type="reset" class="govuk-button govuk-!-font-size-16 opss-button-link opss-nojs-hide" id="opss-reset">
                     Reset
                 </button>
             </div>
