--- a/app/views/psd-general/inc_opss-filters-section.html
+++ b/app/views/psd-general/inc_opss-filters-section.html
@@ -408,7 +408,7 @@
                     Apply
                 </button>
 
-                <button type="reset" class="govuk-button opss-button-link opss-nojs-hide govuk-!-font-size-16 opss-nojs-hide" id="opss-reset" data-module="govuk-button">
+                <button type="reset" class="govuk-button opss-button-link govuk-!-font-size-16 opss-nojs-hide" id="opss-reset" data-module="govuk-button">
                     Reset form
                 </button>
             </div>
