refresh draft designs

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -256,6 +256,12 @@
               <li><a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-general/complete-product_b_notified.html" target="_blank">Complete product page</a></li>
               <li><a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-general/complete-product_b_notified-success.html" target="_blank">Includes example of new success banner </a></li>
             </ul>
+
+            <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+
+            <ul class="govuk-list govuk-list--bullet">
+              <li><a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-general/incomplete-product_b_refresh_1.html" target="_blank">Incomplete notification (refresh upload)</a></li>
+            </ul>
         </div>
       </details>
 
