--- a/app/views/psd-general/inc_opss-header-section.html
+++ b/app/views/psd-general/inc_opss-header-section.html
@@ -20,16 +20,13 @@
                     Cases are used to record findings of investigations and to notify the <abbr title="Office for Product Safety and Standards">OPSS</abbr> about unsafe and non-compliant products.
                 </p>
 
-                <p class="govuk-body-s">
+                <p class="govuk-body-s govuk-!-margin-bottom-1">
                     <span id="search-hint">You can search for a case using the keywords that describe it and by filtering the results.</span> You can also filter all case records without a keyword search.
                 </p>
 
-                <!--p class="govuk-body-s"> CONTEXTUAL MSG
-                    You can request search results as a downloadable <abbr title="Microsoft Excel Open XML Format Spreadsheet">XLSX</abbr> spreadsheet file.
-                </p-->
-                <!--p class="govuk-body-s">
-                    You can create a new case or add a product to an existing case.
-                </p-->
+                <p class="govuk-body-s govuk-visually-hidden">
+                  Search results appear within the following <code>form</code> and within the <code>role = region</code>.
+                </p>
             </div>
         </details>
     </div>
