--- a/app/views/product-case-testing/cases-page.html
+++ b/app/views/product-case-testing/cases-page.html
@@ -31,7 +31,7 @@
                 <p class="govuk-body-s">
                     <span id="search-hint">You can search for a case using the keywords that describe it and by filtering the results.</span> You can also filter all case records without a keyword search.
                 </p>
-                <p class="govuk-body-s">
+                <p class="govuk-body-s govuk-!-margin-bottom-1">
                     You can create a new case or add a product to an existing case.
                 </p>
             </div>
