--- a/app/views/psd-general/cases-page-form-test.html
+++ b/app/views/psd-general/cases-page-form-test.html
@@ -34,7 +34,7 @@
                     Cases are used to record findings of investigations and to notify the <abbr title="Office for Product Safety and Standards">OPSS</abbr> about unsafe and non-compliant products.
                 </p>
 
-                <p class="govuk-body-s">
+                <p class="govuk-body-s govuk-!-margin-bottom-1">
                     <span id="search-hint">You can search for a case using the keywords that describe it and by filtering the results.</span> You can also filter all case records without a keyword search.
                 </p>
 
