--- a/app/views/index.html
+++ b/app/views/index.html
@@ -259,8 +259,15 @@
 
             <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
 
+
+
             <ul class="govuk-list govuk-list--bullet">
-              <li><a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-general/incomplete-product_b_refresh_1.html" target="_blank">Incomplete notification (refresh upload)</a></li>
+              <li><a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-general/incomplete-product_b_refresh_1.html" target="_blank">Incomplete notification</a> - Multi item kit - File has been uploaded - Accept button disabled</li>
+              <li><a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-general/incomplete-product_b_refresh_2.html" target="_blank">Incomplete notification</a> - Multi item kit - Clicking the Refresh link confirms success</li>
+
+
+              <li><a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-general/incomplete-product_b_refresh_3.html" target="_blank">Concentration ranges</a> - single item statement at Upload file form</li>
+              <li><a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-general/incomplete-product_b_refresh_4.html" target="_blank">Concentration ranges</a> - file removed success banner</li>
             </ul>
         </div>
       </details>
