text and copy updates to tasks pages

--- a/app/views/cosmetics-general/tasks/pg-nanomaterial-name.html
+++ b/app/views/cosmetics-general/tasks/pg-nanomaterial-name.html
@@ -21,11 +21,11 @@
             <div class="govuk-form-group">
                 <h1 class="govuk-label-wrapper">
                     <label class="govuk-label govuk-label--l" for="nanoname">
-                        What is the nanomaterial <abbr title="International Nomenclature Cosmetic Ingredient">INCI</abbr> name?
+                        What is the nanomaterial <abbr title="International Nomenclature for Cosmetic Ingredients">INCI</abbr> name?
                     </label>
                 </h1>
                 <div id="nanoname-hint" class="govuk-hint">
-                    This is the International Nomenclature Cosmetic Ingredient name.
+                    This is the International Nomenclature for Cosmetic Ingredients name.
                 </div>
                 <input class="govuk-input govuk-!-margin-top-7" id="nanoname" name="nanoname" type="text" aria-describedby="nanoname-hint">
             </div>
