--- a/app/views/cosmetics-general/tasks/pg-remove-item-blocked.html
+++ b/app/views/cosmetics-general/tasks/pg-remove-item-blocked.html
@@ -22,7 +22,7 @@
 
         <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">A multi-item kit product must include 2 or more items.</p>
 
-        <p class="govuk-body">This product notification draft has defined the product as being a multi-item kit and currently includes 2 items. A product including only 1 item (or component) is classified as a single item product and is not a multi-item kit product.</p>
+        <p class="govuk-body">This draft product notification has defined the product as being a multi-item kit and currently includes 2 items. A product containing only 1 item (or component) is a single item product and is not a multi-item kit product.</p>
 
         <p class="govuk-body">To remove an item you must first add a new item. <span class="govuk-!-font-weight-bold">If the product is not a multi-item kit product</span>, you will need to <a href="pg-delete-draft" class="govuk-link govuk-link--no-visited-state">delete this draft</a>.</p>
 
