--- a/app/views/cosmetics-general/tasks/index.html
+++ b/app/views/cosmetics-general/tasks/index.html
@@ -41,7 +41,7 @@
             <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
                 <li>
                     <a class="govuk-label govuk-link govuk-link--no-visited-state" href="task-page-1" target="_blank">Tasks list page 1</a>
-                    User clicks 'Add product' and lands here - seen as the user first visits the tasks list page. Their first task is 'Create the product'. <i>In the help section is it possible on this first task to use the title: "In this first task" ?</i>
+                    User clicks 'Add product' and lands here - seen as the user first visits the tasks list page. Their first task is 'Create the product'.
                 </li>
                 <li>
                     <a class="govuk-label govuk-link govuk-link--no-visited-state" href="task-page-2" target="_blank">Tasks list page 2</a>
@@ -128,7 +128,7 @@
             <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
                 <li>
                     <a class="govuk-label govuk-link govuk-link--no-visited-state govuk-!-display-inline" href="task-block-01" target="_blank">Must notify nanomaterial first</a><br>
-                    This page shows the task list state with a notification banner of "You cannot notify this product until you have notified [the nanomaterial name]". The full task <b>cannot</b> be completed. <br><br>On the current "You cannot notify this product until you have notified [name]" page, we need to <b>add a hyperlink</b> which returns the user back to the tasks list page, and this is what they see. They can continue tasks for other nanomaterials. (Bruce to source a hyperlink to a page - which we can add to the help section here - explaining how to notify a nanomaterial - opens in a new tab).
+                    This page shows the task list state with a notification banner of "You cannot notify this product until you have notified [the nanomaterial name]". The full task <b>cannot</b> be completed. <br><br>On the current "You cannot notify this product until you have notified [name]" page, we need to <b>add a hyperlink</b> which returns the user back to the tasks list page, and this is what they see. They can continue tasks for other nanomaterials.
                 </li>
                 <li>
                     <a class="govuk-label govuk-link govuk-link--no-visited-state govuk-!-display-inline" href="task-block-02" target="_blank">You cannot notify products containing [name]</a><br>
