--- a/app/views/cosmetics-general/tasks/pg-accept-and-submit-success.html
+++ b/app/views/cosmetics-general/tasks/pg-accept-and-submit-success.html
@@ -19,18 +19,24 @@
           </div>
         </div>
 
-        <p class="govuk-body">Submission of the Cosmetic product notification is complete. Your product is now one of your notified cosmetic products. </p>
+        <p class="govuk-body">
+          Submission of the Cosmetic product notification is complete. Your product is now one of your notified cosmetic products.
+        </p>
+
+        <div class="govuk-inset-text">
+          <p class="govuk-body">You have 7 days to delete the notification. You should only do this if your notification contains wrong information.</p>
+        </div>
 
         <h2 class="govuk-heading-m">What happens next</h2>
 
         <p class="govuk-body">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda ipsam accusamus temporibus voluptate dolorem fuga quos atque corrupti fugiat laudantium, doloremque voluptas.
-        </p>
-        <p class="govuk-body">
-          Voluptas optio nisi inventore quas, eius ducimus suscipit, numquam accusamus nesciunt odit neque doloribus, quia cumque alias.
+          You can now place your cosmetic product on the <abbr title="Great Britain">GB</abbr> market. Your cosmetic product notification will now be searchable by market surveillance authorities. If you have any concerns about your cosmetic product and compliance, please contact your local <a href="https://www.gov.uk/find-local-trading-standards-office" class="govuk-link govuk-link--no-visited-state">Trading Standards office</a>. You can find your local Trading Standards office here.
         </p>
 
-        <p class="govuk-body govuk-!-padding-top-6 govuk-!-padding-bottom-4">Go to the <a href="#" class="govuk-link govuk-link--no-visited-state">Cosmetic products page</a>.</p>
+        <p class="govuk-body">
+          For any queries related to your cosmetic product notification, contact <a href="mailto:opss.enquiries@beis.gov.uk" class="govuk-link govuk-link--no-visited-state">opss.enquiries@beis.gov.uk</a>.
+        </p>
+
       </div>
     </div>
 
