--- a/app/views/cosmetics-general/tasks/pg-remove-nanomaterial-success.html
+++ b/app/views/cosmetics-general/tasks/pg-remove-nanomaterial-success.html
@@ -18,7 +18,7 @@
         </div>
         <div class="govuk-notification-banner__content">
           <h3 class="govuk-notification-banner__heading">
-            The nanomaterial was deleted
+            The nanomaterial was deleted from this draft
           </h3>
         </div>
       </div>
