filter updates to appease the hordes

--- a/app/views/psd-general/businesses-page.html
+++ b/app/views/psd-general/businesses-page.html
@@ -73,8 +73,8 @@
                           Sort by
                       </label>
                       <select class="govuk-select govuk-!-margin-bottom-1" id="results-sort" name="sort">
-                          <option value="" selected="selected"></option>
-                          <option value="newly">Newly added</option>
+                          <option value="newly" selected="selected">Newly added</option>
+                          <option value="relevance">Relevance</option>
                           <option value="most">Most cases</option>
                       </select>
                       <button class="govuk-button opss-js-enabled-hidden">
