--- a/app/views/cosmetics-general/incomplete-product_b_refresh_1.html
+++ b/app/views/cosmetics-general/incomplete-product_b_refresh_1.html
@@ -130,7 +130,7 @@
                         </ul>
 
                         <a id="refresh-1" class="govuk-link govuk-link--no-visited-state govuk-!-display-inline-block" href="/responsible_persons/628/notifications/67816230/edit">
-                            <span class="govuk-!-font-weight-bold">Refresh label image(s)</span>
+                            <span class="govuk-!-font-weight-bold">Refresh product label image(s)</span>
                         </a>
                         <span class="govuk-visually-hidden">by refreshing the page</span>
 
@@ -458,7 +458,7 @@
                         <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
                         <strong class="govuk-warning-text__text">
                             <span class="govuk-warning-text__assistive">Warning</span>
-                            You cannot Accept and submit this notification until you have <br class="opss-br-desktop"><a href="#refresh-1" class="govuk-link govuk-link--no-visited-state">refreshed the label list</a>. This will confirm if the files have successfully uploaded.
+                            You cannot Accept and submit this notification until you have <a href="#refresh-1" class="govuk-link govuk-link--no-visited-state opss-no-wrap-desktop">refreshed the product label list</a>. This will confirm if the files have successfully uploaded.
                         </strong>
                     </div>
 
