alt select form with urls

--- a/app/views/psd-general/inc_opss-sorting.html
+++ b/app/views/psd-general/inc_opss-sorting.html
@@ -1,4 +1,15 @@
                         <select class="govuk-select govuk-!-margin-bottom-1" id="results-sort" name="sort">
+                            <option value="https://opss-html.herokuapp.com/psd-general/cases-page?sort=relevance">Relevance</option>
+                            <option value="https://opss-html.herokuapp.com/psd-general/cases-page?sort=updates" selected="selected">Recent updates</option>
+                            <option value="https://opss-html.herokuapp.com/psd-general/cases-page?sort=oldest">Oldest updates</option>
+                            <option value="https://opss-html.herokuapp.com/psd-general/cases-page?sort=newest">Newest cases</option>
+                        </select>
+                        <button class="govuk-button opss-js-enabled-hidden" data-module="govuk-button">
+                            Sort
+                        </button>
+
+
+                        <!--select class="govuk-select govuk-!-margin-bottom-1" id="results-sort" name="sort">
                             <option value="" selected="selected"></option>
                             <option value="recent">Recent updates</option>
                             <option value="oldest">Oldest updates</option>
@@ -6,4 +17,4 @@
                         </select>
                         <button class="govuk-button opss-js-enabled-hidden" data-module="govuk-button">
                             Sort
-                        </button>
+                        </button-->
