--- a/app/views/psd-general/cases-page.html
+++ b/app/views/psd-general/cases-page.html
@@ -19,9 +19,11 @@
 </div>
 
 <script>
-  document.getElementById("results-sort").addEventListener("change", function(){
-      document.getElementById("sort-form").submit();
-      //alert('form submitted event');
+  var mySort = document.getElementById("results-sort");
+  mySort.addEventListener("change", function(e){
+      e.preventDefault();
+      window.location.replace(mySort.value);
+      return false;
     }
   );
 </script>
