--- a/app/views/psd-general/inc_opss-results-section.html
+++ b/app/views/psd-general/inc_opss-results-section.html
@@ -22,6 +22,45 @@
                     </fieldset>
                     <!--/form-->
 
+
+                    <dl class="govuk-list opss-float-right opss-dl-select opss-js-enabled-hidden" style="box-shadow: none; margin-bottom: 0;">
+                        <dt>
+                            Sort <span class="govuk-visually-hidden">the results</span> by
+                        </dt>
+                        <dd>
+                            <a href="blah?sort=relevance">Relevance</a>
+                        </dd>
+                        <dd>
+                            <a href="blah?sort=recent">Recent updates</a>
+                        </dd>
+                        <dd class="opss-dl-select__show">
+                            <a href="blah?sort=oldest"><span class="govuk-visually-hidden">Active:</span> Oldest updates</a>
+                        </dd>
+                        <dd>
+                            <a href="blah?sort=newest">Newest cases</a>
+                        </dd>
+                    </dl>
+
+
+
+                    <!--dl id="opss-results-sort" class="govuk-list opss-float-right opss-dl-select opss-dl-select--closed">
+                        <dt>
+                            Sort <span class="govuk-visually-hidden">the results</span> by
+                        </dt>
+                        <dd>
+                            <a href="blah?sort=relevance">Relevance</a>
+                        </dd>
+                        <dd>
+                            <a href="blah?sort=recent">Recent updates</a>
+                        </dd>
+                        <dd class="opss-dl-select__show">
+                            <a href="blah?sort=oldest">Oldest updates</a>
+                        </dd>
+                        <dd>
+                            <a href="blah?sort=newest">Newest cases</a>
+                        </dd>
+                    </dl>
+
                     <dl class="govuk-list opss-js-enabled-hidden">
                         <dt>
                             Sort <span class="govuk-visually-hidden">the results</span> by
@@ -36,12 +75,15 @@
                             </span>
                         </dd>
                         <dd>
+
+                        </dd>
+                        <dd>
                             <a class="govuk-link govuk-link--no-visited-state govuk-!-font-size-16" href="blah?sort=oldest">Oldest updates</a>
                         </dd>
                         <dd>
                             <a class="govuk-link govuk-link--no-visited-state govuk-!-font-size-16" href="blah?sort=newest">Newest cases</a>
                         </dd>
-                    </dl>
+                    </dl-->
 
 
                 </div>
